fixing font color on mobile

--- a/src/styles/GameBoard.css
+++ b/src/styles/GameBoard.css
@@ -42,6 +42,7 @@
 
 .square {
   background-color: #f8f8f8;
+  color: #333;
   border: none;
   font-size: 2.5rem;
   font-weight: bold;
